# ai4science-client

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: run_bench_hf.py
src/ai4science_client/: __init__.py  client.py  config.py  hpc_decorator.py  schemas.py  script_builder.py
tests/: test_script_builder.py
